# algos_n_stuff

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: README.md  benchmark.rs  plot_benchmark.py  update_readme.py
cuda/: README.md
src/: build.rs  commands.rs  lib.rs  main.rs
src/algos/: bit_packed_ham.rs  common.rs  distances.rs  mod.rs  seq_gen.rs
